examples/good/13-17-type-checking-not-enough-arguments.hp
def sum :: Int -> Int -> Int x y = x + y;

def x :: Int = sum 2;
