examples/bad/13-09-type-checking-function-application.hp
def fun :: Int -> Int -> Bool x y = x > y;

fun 5 fun;
